# schematch

./: .gitignore  README.md  pom.xml  requirements  sota.docker-compose.yml
cosma_data/ENC_DN/: Sakila_1-it_2  Sakila_1_2  Sakila_1_2-it  Sakila_1_3  Sakila_1_3-it
cosma_data/ENC_STDD/: EmbDI_amazon_google
cosma_data/ENC_STSD/: DeNorm_Books1
cosma_data/ENC_all/: Customer  Employee  IDSystem  beer  dblp_scholar  fodors_zagats  itunes_amazon  walmart_amazon
cosma_data/ENC_denormalized/: denorm-schema1-it_denorm-schema3  denorm-schema1_denorm-schema1-it  denorm-schema2_denorm-schema2-it  denorm-schema3_denorm-schema3-it
cosma_data/ENC_single_table/: dblp_acm  imdb_movielens
cosma_data/ME_DN/: Sakila_1_2
cosma_data/ME_SN/: Sakila_1_1-it  Sakila_2_2-it
cosma_data/ME_STDD/: EmbDI_fodors_zagats
cosma_data/ME_STSD/: DeNorm_Student  EmbDI_dblp_acm
cosma_data/ME_all/: DeNorm_Books1  DeNorm_IDSystem  Sakila_1_2-it  Sakila_1_3-it
cosma_data/ME_general_denormalized/: Sakila_1-it_2  Sakila_1-it_3  (+1 more)
references/: README.md  important_links.md
scripts/: evaluate_runs.py  evalute_runs.py
src/main/resources/embedAlign/: Dockerfile  REGAL_alignments.py  config.py  embedAlign_cache.py  embedAlign_graph.py  embedAlign_server.py  embedAlign_wrapper.py  pyproject.toml  requirements  utils.py  xnetmf.py
src/main/resources/leapme/: .gitignore  Dockerfile  glove_preprocessing.py  leapme_server.py  leapme_transfer_predict.py  pyproject.toml  train_leapme_model.py
src/main/resources/node2vec/: .gitignore  Dockerfile  node2vec_matcher.py  node2vec_server.py  pyproject.toml
(+3593 files in other folders)
