[tool.poetry]
name = "embedalign"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.1"
matplotlib = "^3.8.2"
node2vec = "^0.4.6"
pot = "^0.9.3"
pyvis = "^0.3.2"
scikit-learn = "~1.2"
matching = "^1.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
