[tool.poetry]
name = "node2vec-matcher"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
node2vec = "^0.4.6"
flask = "^3.0.0"
matplotlib = "^3.8.2"
mpld3 = "^0.5.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
